--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script>
         // IMPORTANT: remember to change this to your game id!
-        var GAME_ID = "5096121437257728-0";
+        var GAME_ID = "5096121437257728-3";
 
         function onMessage(event) {
           var request = event.data;
@@ -38,14 +38,14 @@
           // Set the HTML (instead of the iframe src) to prevent history changes (so "back" will work correctly).
           document.getElementById("platform_iframe_container").innerHTML =
             '<iframe id="platform_iframe" src="http://www.multiplayer-gaming.com/v1/dist/index.html?onlyGameId=' +
-            GAME_ID + '" frameborder="0" seamless="seamless"></iframe>';
+            GAME_ID + '" seamless="seamless"></iframe>';
         }
         document.addEventListener('deviceready', onDeviceReady, false);
         if (!window.cordova) {
           window.addEventListener("load", onDeviceReady);
         }
         </script>
-        <img id="loader" src="animatedEllipse.gif">
+        <img alt="Loader" id="loader" src="animatedEllipse.gif">
         <div id="platform_iframe_container"></div>
     </body>
 </html>
